# codex

./: AGENTS.md  CHANGELOG.md  README.md  codex_app_server_integration_plan.md  run_codex_convo_plan.md
codex-rs/: Cargo.toml  README.md  agent_refactor.md  config.md  flag.md  lastprs  new_prompt.md  pr2md  review  state.md  study  test-server.py  tools.md
codex-rs/agent/: Cargo.toml
codex-rs/agent/src/: apply_patch.rs  client_common.rs  config_types.rs  exec.rs  lib.rs  model_client.rs  model_family.rs  notifications.rs  runtime.rs  runtime_config.rs  session_services.rs  session_state.rs  tool_schema.rs  tools_config.rs
codex-rs/agent/tests/: runtime_api.rs
codex-rs/app-server/: Cargo.toml
codex-rs/app-server-protocol/: Cargo.toml
codex-rs/app-server-protocol/src/: export.rs  protocol.rs
codex-rs/app-server/src/: codex_message_processor.rs  lib.rs  outgoing_message.rs
codex-rs/apply-patch/: Cargo.toml
codex-rs/apply-patch/src/: lib.rs  main.rs  parser.rs  seek_sequence.rs  standalone_executable.rs
codex-rs/apply-patch/tests/: cli.rs
codex-rs/arg0/: Cargo.toml
codex-rs/arg0/src/: lib.rs  openai_api_key_env_var.rs
codex-rs/backend-client/src/: client.rs  types.rs
codex-rs/chatgpt/: Cargo.toml
codex-rs/chatgpt/src/: apply_command.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: config_command.rs  debug_sandbox.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs  pre_main_hardening.rs  proto.rs  review.rs  update.rs  windows.rs
codex-rs/cli/tests/: config.rs  mcp_add_remove.rs
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/cloud-tasks-api/: Cargo.toml
codex-rs/cloud-tasks-api/src/: lib.rs
codex-rs/cloud-tasks-client/: Cargo.toml
codex-rs/cloud-tasks-client/src/: api.rs  http.rs  lib.rs  mock.rs  patch_apply.rs
codex-rs/cloud-tasks/src/: app.rs  env_detect.rs  lib.rs  new_task.rs  scrollable_diff.rs  ui.rs  util.rs
codex-rs/cloud-tasks/tests/: env_filter.rs
codex-rs/codex-agent/: Cargo.toml
codex-rs/codex-agent/src/: conversation_history.rs  lib.rs  model_provider.rs  safety.rs  services.rs  shell.rs  token_data.rs  tooling.rs  truncate.rs  turn_diff_tracker.rs
codex-rs/codex-telemetry/: Cargo.toml
codex-rs/codex-telemetry/src/: lib.rs
codex-rs/codex-telemetry/tests/: otel_file_export.rs
codex-rs/common/: README.md
codex-rs/common/src/: approval_presets.rs  model_presets.rs
codex-rs/core/: Cargo.toml  gpt_5_codex_prompt.md  prompt.md  session.md
codex-rs/core/src/: admin_controls.rs  agent_config.rs  agent_services.rs  apply_patch.rs  auth.rs  bash.rs  chat_completions.rs  client.rs  client_common.rs  codex.rs  codex_conversation.rs  config.rs  config_edit.rs  config_edit_tool.rs  config_loader.rs  config_profile.rs  config_types.rs  conversation_history.rs  conversation_manager.rs  custom_prompts.rs  default_client.rs  environment_context.rs  error.rs  error_codes.rs  event_mapping.rs  exec.rs  exec_command.rs  features.rs  function_tool.rs  git_info.rs  git_worktree.rs  is_safe_command.rs  ishell.rs  landlock.rs  lib.rs  mcp_connection_manager.rs  mcp_tool_call.rs  message_history.rs  model_client_adapter.rs  model_family.rs  (+32 more)
codex-rs/core/tests/: all.rs  chat_completions_payload.rs  chat_completions_sse.rs  cli_stream.rs  model_provider_override.rs  prompt_caching.rs  prompt_harness_bin.rs  sandbox.rs  windows_appcontainer.rs
codex-rs/docs/: agent_runtime_baseline.md  global.toml
codex-rs/exec/: Cargo.toml
codex-rs/exec-command-mcp/: Cargo.toml
codex-rs/exec-command-mcp/src/: exec_command.rs  exec_command_session.rs  lib.rs  main.rs  message_processor.rs  outgoing_message.rs  outgoing_message_sender.rs  session_id.rs  session_manager.rs
codex-rs/exec/src/: cli.rs  event_processor.rs  event_processor_noop.rs  event_processor_with_human_output.rs  event_processor_with_json_output.rs  event_processor_with_jsonl_output.rs  exec_events.rs  experimental_event_processor_with_json_output.rs  lib.rs  main.rs
codex-rs/exec/tests/: event_processor_with_json_output.rs  sandbox.rs  windows_sandbox.rs
codex-rs/execpolicy/src/: arg_resolver.rs  execv_checker.rs  policy.rs  policy_parser.rs  program.rs  sed_command.rs
codex-rs/file-search/src/: lib.rs
codex-rs/git-apply/src/: lib.rs
codex-rs/git-tooling/src/: ghost_commits.rs  lib.rs  operations.rs
codex-rs/linux-sandbox/src/: landlock.rs
codex-rs/login/: Cargo.toml
codex-rs/login/src/: auth.rs  auth_store.rs  entrypoints.rs  error_page.html  lib.rs  lib_tests.rs  server.rs  token_data.rs
codex-rs/login/tests/: api_key_login.rs  headless.rs  server.rs
codex-rs/mcp-client/: Cargo.toml
codex-rs/mcp-client/src/: mcp_client.rs
codex-rs/mcp-server/: Cargo.toml
codex-rs/mcp-server/src/: codex_message_processor.rs  codex_tool_config.rs  codex_tool_runner.rs  conversation_loop.rs  error_code.rs  exec_approval.rs  lib.rs  main.rs  mcp_protocol.rs  message_processor.rs  mock_data.rs  outgoing_message.rs  patch_approval.rs  request_id.rs  wire_format.rs
codex-rs/mcp-server/tests/: codex_message_processor_flow.rs  codex_tool.rs  create_conversation.rs  interrupt.rs  send_message.rs  stream_conversation.rs
codex-rs/mcp-types/: generate_mcp_types.py
codex-rs/ollama/src/: client.rs  parser.rs
codex-rs/otel/: Cargo.toml
codex-rs/otel/src/: config.rs  file_exporter.rs  lib.rs  otel_event_manager.rs  otel_provider.rs  trace_manager.rs
codex-rs/otel/tests/: otel_file_export.rs
codex-rs/protocol/: Cargo.toml  README.md
codex-rs/protocol-ts/: Cargo.toml  generate-ts
codex-rs/protocol-ts/src/: lib.rs  main.rs
codex-rs/protocol/src/: config_types.rs  custom_prompts.rs  lib.rs  mcp_protocol.rs  models.rs  (+3 more)
codex-rs/responses-api-proxy/: Cargo.toml  README.md
codex-rs/scripts/: codex_parallel_benchmark.py
codex-rs/signing/: 1_generate_cert.sh  2_export_pkcs_12.sh  3_import_to_keychain.sh  4_trust_cert.sh  sign_codex.sh
codex-rs/tmp/: track_descendants  track_descendants.c  track_kqueue  track_kqueue.c
codex-rs/tui/: Cargo.toml
codex-rs/windows-sandbox/: Cargo.toml  README.md
sdk/python/: .gitignore  README.md  pyproject.toml  pyrightconfig.json
(+682 files in other folders)
