[package]
name = "codex-cloud-tasks-api"
version = { workspace = true }
edition = "2024"

[lib]
name = "codex_cloud_tasks_api"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.12"

