[package]
edition = "2024"
name = "exec-command-mcp"
version = { workspace = true }

[[bin]]
name = "exec-command-mcp"
path = "src/main.rs"

[lib]
name = "exec_command_mcp"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
mcp-types = { path = "../mcp-types" }
portable-pty = "0.9.0"
schemars = "0.8.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "time",
    "sync",
    "signal",
] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
