[package]
edition = "2024"
name = "codex-login"
version = { workspace = true }

[features]
http-e2e-tests = []

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
html-escape = "0.2"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2.0.12"
tiny_http = "0.12"
tokio = { version = "1", features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1"
url = "2"
urlencoding = "2"
webbrowser = "1"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
wiremock = "0.6"

[lints]
workspace = true
