[package]
edition = "2024"
name = "codex-otel"
version = { workspace = true }

[lib]
name = "codex_otel"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[features]
# Compile-time gate for OTLP support; disabled by default.
# Downstream crates can enable via `features = ["otel"]`.
default = []
otel = [
  "opentelemetry",
  "opentelemetry_sdk",
  "opentelemetry-otlp",
  "tonic",
]

[dependencies]
# Optional to keep build lean unless feature enabled
codex-protocol = { path = "../protocol" }
chrono = "0.4.42"
tracing = { version = "0.1" }
opentelemetry = { version = "0.30.0", features = ["logs"], optional = true }
opentelemetry_sdk = { version = "0.30.0", features = ["logs", "rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "http-proto", "http-json", "reqwest", "reqwest-rustls"], optional = true }
tonic = { version = "0.13.1", optional = true }
serde = { version = "1", features = ["derive"] }
strum_macros = "0.27.2"
opentelemetry-semantic-conventions = "0.30.0"
reqwest = "0.12.23"