[package]
name = "codex-windows-sandbox"
version = { workspace = true }
edition = "2024"

[lib]
name = "codex_windows_sandbox"
path = "src/lib.rs"

[[bin]]
name = "codex-windows-sandbox"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
codex-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_JobObjects",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
] }
