[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "openai-codex-sdk"
version = "0.1.0"
description = "Modern minimalistic Python SDK scaffold."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Codex Team"}]
keywords = ["codex", "sdk", "template"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://example.com/openai-codex-sdk"
Repository = "https://example.com/openai-codex-sdk.git"

[project.optional-dependencies]
dev = [
    "mypy>=1.12",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pyright>=1.1.379",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/openai_codex_sdk"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A"]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
packages = ["openai_codex_sdk"]
strict = true
warn_unused_configs = true
